# AlFractal

./: CMakeLists.txt  README.md
include/: Algebra.hpp  Fractal.hpp  GUI.hpp
source/: Fractal.cpp  GUI.cpp  Main.cpp
